--- a/environment.yml
+++ b/environment.yml
@@ -1,26 +1,191 @@
 # packages in environment at /Users/shaiko/R&D/Leumi_financial_analysis/.conda:
 #
 # Name                    Version                   Build  Channel
+altair                    5.2.0              pyhd8ed1ab_0    conda-forge
+appnope                   0.1.4              pyhd8ed1ab_0    conda-forge
+asttokens                 2.4.1              pyhd8ed1ab_0    conda-forge
+attrs                     23.2.0             pyh71513ae_0    conda-forge
+aws-c-auth                0.7.16               h0d2f7a6_8    conda-forge
+aws-c-cal                 0.6.10               h677d54c_2    conda-forge
+aws-c-common              0.9.14               h93a5062_0    conda-forge
+aws-c-compression         0.2.18               h677d54c_2    conda-forge
+aws-c-event-stream        0.4.2                h59ac3ca_6    conda-forge
+aws-c-http                0.8.1                hfe5d766_7    conda-forge
+aws-c-io                  0.14.6               h9ac2cdb_1    conda-forge
+aws-c-mqtt                0.10.3               hb8a1441_2    conda-forge
+aws-c-s3                  0.5.2                h4398043_2    conda-forge
+aws-c-sdkutils            0.1.15               h677d54c_2    conda-forge
+aws-checksums             0.1.18               h677d54c_2    conda-forge
+aws-crt-cpp               0.26.3               h0de420c_2    conda-forge
+aws-sdk-cpp               1.11.267             h2fb64bc_3    conda-forge
+blinker                   1.7.0              pyhd8ed1ab_0    conda-forge
+brotli                    1.1.0                hb547adb_1    conda-forge
+brotli-bin                1.1.0                hb547adb_1    conda-forge
+brotli-python             1.1.0           py312h9f69965_1    conda-forge
 bzip2                     1.0.8                h93a5062_5    conda-forge
+c-ares                    1.27.0               h93a5062_0    conda-forge
 ca-certificates           2024.2.2             hf0a4a13_0    conda-forge
+cachetools                5.3.3              pyhd8ed1ab_0    conda-forge
+certifi                   2024.2.2           pyhd8ed1ab_0    conda-forge
+charset-normalizer        3.3.2              pyhd8ed1ab_0    conda-forge
+click                     8.1.7           unix_pyh707e725_0    conda-forge
+comm                      0.2.2              pyhd8ed1ab_0    conda-forge
+contourpy                 1.2.0           py312h76e736e_0    conda-forge
 currencyconverter         0.17.17                  pypi_0    pypi
+cycler                    0.12.1             pyhd8ed1ab_0    conda-forge
+debugpy                   1.8.1           py312h20a0b95_0    conda-forge
+decorator                 5.1.1              pyhd8ed1ab_0    conda-forge
 et_xmlfile                1.1.0              pyhd8ed1ab_0    conda-forge
+exceptiongroup            1.2.0              pyhd8ed1ab_2    conda-forge
+executing                 2.0.1              pyhd8ed1ab_0    conda-forge
+fonttools                 4.49.0          py312he37b823_0    conda-forge
+freetype                  2.12.1               hadb7bae_2    conda-forge
+gflags                    2.2.2             hc88da5d_1004    conda-forge
+gitdb                     4.0.11             pyhd8ed1ab_0    conda-forge
+gitpython                 3.1.42             pyhd8ed1ab_0    conda-forge
+glog                      0.7.0                hc6770e3_0    conda-forge
+icu                       73.2                 hc8870d7_0    conda-forge
+idna                      3.6                pyhd8ed1ab_0    conda-forge
+importlib-metadata        7.0.2              pyha770c72_0    conda-forge
+importlib_metadata        7.0.2                hd8ed1ab_0    conda-forge
+importlib_resources       6.3.0              pyhd8ed1ab_0    conda-forge
+ipykernel                 6.29.3             pyh3cd1d5f_0    conda-forge
+ipython                   8.22.2             pyh707e725_0    conda-forge
+ipywidgets                8.1.2              pyhd8ed1ab_0    conda-forge
+jedi                      0.19.1             pyhd8ed1ab_0    conda-forge
+jinja2                    3.1.3              pyhd8ed1ab_0    conda-forge
+jsonschema                4.21.1             pyhd8ed1ab_0    conda-forge
+jsonschema-specifications 2023.12.1          pyhd8ed1ab_0    conda-forge
+jupyter_client            8.6.1              pyhd8ed1ab_0    conda-forge
+jupyter_core              5.7.2           py312h81bd7bf_0    conda-forge
+jupyterlab_widgets        3.0.10             pyhd8ed1ab_0    conda-forge
+kiwisolver                1.4.5           py312h389731b_1    conda-forge
+krb5                      1.21.2               h92f50d5_0    conda-forge
+lcms2                     2.16                 ha0e7c42_0    conda-forge
+lerc                      4.0.0                h9a09cb3_0    conda-forge
+libabseil                 20240116.1      cxx17_hebf3989_2    conda-forge
+libarrow                  15.0.1           h8eee870_2_cpu    conda-forge
+libarrow-acero            15.0.1           hebf3989_2_cpu    conda-forge
+libarrow-dataset          15.0.1           hebf3989_2_cpu    conda-forge
+libarrow-flight           15.0.1           h1f98dca_2_cpu    conda-forge
+libarrow-flight-sql       15.0.1           hb095944_2_cpu    conda-forge
+libarrow-gandiva          15.0.1           h2c81988_2_cpu    conda-forge
+libarrow-substrait        15.0.1           h50959cf_2_cpu    conda-forge
+libblas                   3.9.0           21_osxarm64_openblas    conda-forge
+libbrotlicommon           1.1.0                hb547adb_1    conda-forge
+libbrotlidec              1.1.0                hb547adb_1    conda-forge
+libbrotlienc              1.1.0                hb547adb_1    conda-forge
+libcblas                  3.9.0           21_osxarm64_openblas    conda-forge
+libcrc32c                 1.1.2                hbdafb3b_0    conda-forge
+libcurl                   8.6.0                h2d989ff_0    conda-forge
+libcxx                    16.0.6               h4653b0c_0    conda-forge
+libdeflate                1.19                 hb547adb_0    conda-forge
+libedit                   3.1.20191231         hc8eb9b7_2    conda-forge
+libev                     4.33                 h93a5062_2    conda-forge
+libevent                  2.1.12               h2757513_1    conda-forge
 libexpat                  2.6.1                hebf3989_0    conda-forge
 libffi                    3.4.2                h3422bc3_5    conda-forge
+libgfortran               5.0.0           13_2_0_hd922786_3    conda-forge
+libgfortran5              13.2.0               hf226fd6_3    conda-forge
+libgoogle-cloud           2.22.0               hbebe991_1    conda-forge
+libgoogle-cloud-storage   2.22.0               h8a76758_1    conda-forge
+libgrpc                   1.62.1               h9c18a4f_0    conda-forge
+libiconv                  1.17                 h0d3ecfb_2    conda-forge
+libjpeg-turbo             3.0.0                hb547adb_1    conda-forge
+liblapack                 3.9.0           21_osxarm64_openblas    conda-forge
+libllvm16                 16.0.6               haab561b_3    conda-forge
+libnghttp2                1.58.0               ha4dd798_1    conda-forge
+libopenblas               0.3.26          openmp_h6c19121_0    conda-forge
+libparquet                15.0.1           h278d484_2_cpu    conda-forge
+libpng                    1.6.43               h091b4b1_0    conda-forge
+libprotobuf               4.25.3               hbfab5d5_0    conda-forge
+libre2-11                 2023.09.01           h7b2c953_2    conda-forge
+libsodium                 1.0.18               h27ca646_1    conda-forge
 libsqlite                 3.45.1               h091b4b1_0    conda-forge
+libssh2                   1.11.0               h7a5bd25_0    conda-forge
+libthrift                 0.19.0               h026a170_1    conda-forge
+libtiff                   4.6.0                ha8a6c65_2    conda-forge
+libutf8proc               2.8.0                h1a8c8d9_0    conda-forge
+libwebp-base              1.3.2                hb547adb_0    conda-forge
+libxcb                    1.15                 hf346824_0    conda-forge
+libxml2                   2.12.5               h0d0cfa8_0    conda-forge
 libzlib                   1.2.13               h53f4e23_5    conda-forge
+llvm-openmp               18.1.1               hcd81f8e_0    conda-forge
+lz4-c                     1.9.4                hb7217d7_0    conda-forge
+markdown-it-py            3.0.0              pyhd8ed1ab_0    conda-forge
+markupsafe                2.1.5           py312he37b823_0    conda-forge
+matplotlib                3.8.3           py312h1f38498_0    conda-forge
+matplotlib-base           3.8.3           py312ha6faf65_0    conda-forge
+matplotlib-inline         0.1.6              pyhd8ed1ab_0    conda-forge
+mdurl                     0.1.2              pyhd8ed1ab_0    conda-forge
+munkres                   1.1.4              pyh9f0ad1d_0    conda-forge
 ncurses                   6.4                  h463b476_2    conda-forge
+nest-asyncio              1.6.0              pyhd8ed1ab_0    conda-forge
+numpy                     1.26.4          py312h8442bc7_0    conda-forge
+openjpeg                  2.5.2                h9f1df11_0    conda-forge
 openpyxl                  3.1.2           py312h02f2b3b_1    conda-forge
-openssl                   3.2.1                h0d3ecfb_0    conda-forge
+openssl                   3.2.1                h0d3ecfb_1    conda-forge
+orc                       2.0.0                h3d3088e_0    conda-forge
+packaging                 23.2               pyhd8ed1ab_0    conda-forge
+pandas                    2.2.1           py312h88edd18_0    conda-forge
+parso                     0.8.3              pyhd8ed1ab_0    conda-forge
+pexpect                   4.9.0              pyhd8ed1ab_0    conda-forge
+pickleshare               0.7.5                   py_1003    conda-forge
+pillow                    10.2.0          py312hac22aec_0    conda-forge
 pip                       24.0               pyhd8ed1ab_0    conda-forge
+pkgutil-resolve-name      1.3.10             pyhd8ed1ab_1    conda-forge
+platformdirs              4.2.0              pyhd8ed1ab_0    conda-forge
+prompt-toolkit            3.0.42             pyha770c72_0    conda-forge
+protobuf                  4.25.3          py312h1a610f3_0    conda-forge
+psutil                    5.9.8           py312he37b823_0    conda-forge
+pthread-stubs             0.4               h27ca646_1001    conda-forge
+ptyprocess                0.7.0              pyhd3deb0d_0    conda-forge
+pure_eval                 0.2.2              pyhd8ed1ab_0    conda-forge
+pyarrow                   15.0.1          py312h1251918_2_cpu    conda-forge
+pydeck                    0.8.0              pyhd8ed1ab_0    conda-forge
+pygments                  2.17.2             pyhd8ed1ab_0    conda-forge
+pyparsing                 3.1.2              pyhd8ed1ab_0    conda-forge
+pysocks                   1.7.1              pyha2e5f31_6    conda-forge
 python                    3.12.2          hdf0ec26_0_cpython    conda-forge
 python-dateutil           2.9.0              pyhd8ed1ab_0    conda-forge
+python-tzdata             2024.1             pyhd8ed1ab_0    conda-forge
 python_abi                3.12                    4_cp312    conda-forge
+pytz                      2024.1             pyhd8ed1ab_0    conda-forge
+pyyaml                    6.0.1           py312h02f2b3b_1    conda-forge
+pyzmq                     25.1.2          py312h1edf716_0    conda-forge
+re2                       2023.09.01           h4cba328_2    conda-forge
 readline                  8.2                  h92ec313_1    conda-forge
+referencing               0.33.0             pyhd8ed1ab_0    conda-forge
+requests                  2.31.0             pyhd8ed1ab_0    conda-forge
+rich                      13.7.1             pyhd8ed1ab_0    conda-forge
+rpds-py                   0.18.0          py312h77200ec_0    conda-forge
 setuptools                69.1.1             pyhd8ed1ab_0    conda-forge
 six                       1.16.0             pyh6c4a22f_0    conda-forge
+smmap                     5.0.0              pyhd8ed1ab_0    conda-forge
+snappy                    1.1.10               h17c5cce_0    conda-forge
+stack_data                0.6.2              pyhd8ed1ab_0    conda-forge
+streamlit                 1.32.2             pyhd8ed1ab_0    conda-forge
+tenacity                  8.2.3              pyhd8ed1ab_0    conda-forge
 tk                        8.6.13               h5083fa2_1    conda-forge
+toml                      0.10.2             pyhd8ed1ab_0    conda-forge
+toolz                     0.12.1             pyhd8ed1ab_0    conda-forge
+tornado                   6.4             py312he37b823_0    conda-forge
+traitlets                 5.14.2             pyhd8ed1ab_0    conda-forge
+typing-extensions         4.10.0               hd8ed1ab_0    conda-forge
+typing_extensions         4.10.0             pyha770c72_0    conda-forge
 tzdata                    2024a                h0c530f3_0    conda-forge
+tzlocal                   5.2             py312h81bd7bf_0    conda-forge
+urllib3                   2.2.1              pyhd8ed1ab_0    conda-forge
+validators                0.22.0             pyhd8ed1ab_0    conda-forge
+watchdog                  4.0.0           py312he37b823_0    conda-forge
+wcwidth                   0.2.13             pyhd8ed1ab_0    conda-forge
 wheel                     0.42.0             pyhd8ed1ab_0    conda-forge
+widgetsnbextension        4.0.10             pyhd8ed1ab_0    conda-forge
 xlrd                      2.0.1              pyhd8ed1ab_3    conda-forge
+xorg-libxau               1.0.11               hb547adb_0    conda-forge
+xorg-libxdmcp             1.1.3                h27ca646_0    conda-forge
 xz                        5.2.6                h57fd34a_0    conda-forge
+yaml                      0.2.5                h3422bc3_2    conda-forge
+zeromq                    4.3.5                hebf3989_1    conda-forge
+zipp                      3.17.0             pyhd8ed1ab_0    conda-forge
+zstd                      1.5.5                h4f39d0f_0    conda-forge
