--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,7 +49,8 @@
                 "koffman_financial_analysis.py","--",
                 "--bank", ".data/bank_jan23_april24.xls",
                  "-v", ".data/max_jan23_april24.xlsx",
-                 "--investements", ".data/investements.json"
+                 "--investements", ".data/investements.json",
+                 "--isracard", ".data/isracard"
             ]
         },   
     ]
